[package]
name = "system_error"
version = "0.1.1"
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
license = "MIT"
repository = "https://github.com/kalamay/system_error"
documentation = "https://docs.rs/system_error"
description = "A library for cross platform system errors"
keywords = ["error", "system_error", "kern_return_t", "mach"]
edition = "2021"
